Debugger debugging works! Console display not tested. Got rid of annoying newlines. Severity level does not display correctly.
Now need to add logging code for dll registration and duplicate registry / debug library detection.

git-svn-id: file:///mnt/svn/ryan-debug@91 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,8 @@ set( srcs
 	src/error.cpp
 	src/fs.cpp
 	src/hash.cpp
+	src/info.cpp
+	src/io.cpp
 	src/macros.cpp
 	src/modules.cpp
 	src/MurmurHash3.cpp
