Build speed improvements.
git-svn-id: file:///mnt/svn/ryan-debug@92 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ set( srcs
 	src/hash.cpp
 	src/info.cpp
 	src/io.cpp
+	src/logging.cpp
 	src/macros.cpp
 	src/modules.cpp
 	src/MurmurHash3.cpp
@@ -148,6 +149,7 @@ set (hdrs
 	Ryan_Debug/hash.h
 	Ryan_Debug/info.h
 	Ryan_Debug/io.h
+	Ryan_Debug/logging.h
 	Ryan_Debug/macros.h
 	Ryan_Debug/modules.h
 	Ryan_Debug/MurmurHash3.h
