Added custom validator and validator chain support. Ryan_Debug/dlls split from registry. Code untested, but should build and work per changes since yesterday. One last to-do: add Ryan_Debug.xml to windows and linux install paths in a place where it is picked up as at least a worst-case dll. Also need to verify that plugins are still searchable on windows. And need to check that the other apps still build.
Then I can work on the rtmath and mish-tmatrix changes, and also on my ebcm tm implementation.

Could also make the code more thread-safe in the future.


git-svn-id: file:///mnt/svn/ryan-debug@96 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ link_directories(${Boost_LIBRARY_DIR})
 set( srcs
 	src/config.cpp
 	src/debug.cpp
+	src/dlls.cpp
 	src/error.cpp
 	src/fs.cpp
 	src/hash.cpp
@@ -148,6 +149,7 @@ set (hdrs
 	Ryan_Debug/config.h
 	Ryan_Debug/defs.h
 	Ryan_Debug/debug.h
+	Ryan_Debug/dlls.h
 	Ryan_Debug/error.h
 	Ryan_Debug/fs.h
 	Ryan_Debug/hash.h
