Still can't get the severity level right. It's a final blocking change to linking with more stuff.
git-svn-id: file:///mnt/svn/ryan-debug@98 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,6 +297,12 @@ INSTALL(DIRECTORY Ryan_Debug/
 	FILES_MATCHING PATTERN "*.h"
 	)
 
+INSTALL(
+		FILES "${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.xml"
+		DESTINATION ${INSTALL_INCLUDE_DIR}/../share
+		COMPONENT Scripts
+	)
+
 IF(INSTALL_MODULES)
 	INSTALL(
 		FILES ${PROJECT_BINARY_DIR}/module-ryan-debug
