Small fixes on windows / linux. Needed to add two files to the install include directory - cmake-settings.h and Ryan.Ryan_Debug.manifest.h are needed in both windows and linux now.
Also added a mutex for debug initiation code.

git-svn-id: file:///mnt/svn/ryan-debug@102 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,7 +313,10 @@ INSTALL(DIRECTORY Ryan_Debug/
 	COMPONENT Headers
 	FILES_MATCHING PATTERN "*.h"
 	)
-
+INSTALL(FILES
+	"${MANIFEST_APP_SNIPPET_NAME}"
+	"${CMAKE_CURRENT_BINARY_DIR}/cmake-settings.h"
+	DESTINATION "${INSTALL_INCLUDE_DIR}/Ryan_Debug" COMPONENT Headers)
 INSTALL(
 		FILES "${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.xml"
 		DESTINATION ${INSTALL_INCLUDE_DIR}/../share
