git-svn-id: file:///mnt/svn/rtmath@1692 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/oneellip-parallel/CMakeLists.txt
+++ b/rtmath/rtmath-apps/oneellip-parallel/CMakeLists.txt
@@ -21,11 +21,14 @@ include_directories(${ICE_INCLUDE_DIR})
 
 #add_subdirectory (protobuf)
 add_executable (rtmath-oneellip-parallel
+	app.cpp
+	app.h
 	comm.cpp
 	comm.h
 	dispatcher.cpp
 	dispatcher.h
 	main.cpp
+	main.h
 	worker.cpp
 	worker.h
 	)
