--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -1,15 +1,7 @@
 #pragma once
 
-#define SYS_RTC "@DATA_DIR_PREFIX@/data/rtmath.conf"
-#define REGISTRY_PLUGINS_OVERRIDE_DIR "@REGISTRY_PLUGINS_OVERRIDE_DIR@"
-
-#define COMPRESS_ZLIB @COMPRESS_ZLIB@
-#define COMPRESS_GZIP @COMPRESS_GZIP@
-#define COMPRESS_BZIP2 @COMPRESS_BZIP2@
-
-#define COMPRESS_SZIP @COMPRESS_SZIP@
-
-#define USE_RYAN_SERIALIZATION @USE_RYAN_SERIALIZATION_FLAG@
+//#define SYS_RTC "@DATA_DIR_PREFIX@/data/rtmath.conf"
+//#define REGISTRY_PLUGINS_OVERRIDE_DIR "@REGISTRY_PLUGINS_OVERRIDE_DIR@"
 
 #define RTMATH_MAJOR @MAJOR@
 #define RTMATH_MINOR @MINOR@
