ddscat-base builds. Needed an odd redeclare of __declspec(dllexport) in config.cpp, as the symbols were not being emitted.
git-svn-id: file:///mnt/svn/rtmath@1694 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -158,7 +158,7 @@ endif()
 
 add_library (rtmath_core SHARED
 	${rtmath_core-files} 
-	${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h 
+	#${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h 
 	${CMAKE_CURRENT_BINARY_DIR}/cmake-settings.h
 	${CMAKE_CURRENT_BINARY_DIR}/module-rtmath
 	)
