Plugins folder renamed.
git-svn-id: file:///mnt/svn/ryan-debug@103 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/plugins/test/CMakeLists.txt
+++ b/plugins/test/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library (plugin_test SHARED
 	)
 addlib(plugin_test SHARED)
 
-addplugin(plugin_test Testing)
+addplugin(plugin_test Testing Ryan_Debug)
 
 target_link_libraries(plugin_test ${liblist} Ryan_Debug )
 
