git-svn-id: file:///mnt/svn/rtmath@1702 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/ImageMagick/CMakeLists.txt
+++ b/rtmath/plugins/ImageMagick/CMakeLists.txt
@@ -21,6 +21,6 @@ target_link_libraries(rtmath_plugin_ImageMagick
 	rtmath_images
 	${rtmath_images-libs}
 	${ImageMagick_LIBRARIES})
-addplugin(rtmath_plugin_ImageMagick Shapes)
+addplugin(rtmath_plugin_ImageMagick Shapes rtmath)
 
 
