--- a/rtmath/plugins/bhmie/CMakeLists.txt
+++ b/rtmath/plugins/bhmie/CMakeLists.txt
@@ -16,5 +16,5 @@ include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
 
 target_link_libraries(rtmath_plugin_bhmie ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat rtmath_bhmie)
-addplugin(rtmath_plugin_bhmie non_dda)
+addplugin(rtmath_plugin_bhmie non_dda rtmath)
 
