--- a/rtmath/plugins/netcdf/CMakeLists.txt
+++ b/rtmath/plugins/netcdf/CMakeLists.txt
@@ -38,5 +38,5 @@ target_link_libraries(rtmath_plugin_netcdf
 	rtmath_voronoi
 	rtmath_data
 	netcdf)
-addplugin(rtmath_plugin_netcdf io)
+addplugin(rtmath_plugin_netcdf io rtmath)
 
