--- a/rtmath/plugins/nondda-misc/CMakeLists.txt
+++ b/rtmath/plugins/nondda-misc/CMakeLists.txt
@@ -13,5 +13,5 @@ include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
 
 target_link_libraries(rtmath_plugin_nondda_misc ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat )
-addplugin(rtmath_plugin_nondda_misc non_dda)
+addplugin(rtmath_plugin_nondda_misc non_dda rtmath)
 
