git-svn-id: file:///mnt/svn/rtmath@1710 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -82,7 +82,7 @@ if (BUILD_PLUGINS)
 		add_subdirectory(voro)
 	endif()
 	option (BUILD_PLUGIN_VORO2D
-		"Build VORO++ 2d plugin. Used in stats." ON)
+		"Build VORO++ 2d plugin. Used in stats." OFF)
 	if (BUILD_PLUGIN_VORO2D)
 		add_subdirectory(voro2d)
 	endif()
