--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -43,14 +43,14 @@ addappdir(liu-regenerate-runs OFF)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
-addappdir(oneellip-parallel ON)
+addappdir(oneellip-parallel OFF)
 addappdir(orientation-ensembles OFF)
 addappdir(orientation-output-table OFF)
 addappdir(orientation-weights OFF)
-addappdir(orientation-weights-1d OFF)
+addappdir(orientation-weights-1d ON)
 addappdir(orientation-weights-3d OFF)
 addappdir(orientation-weights-3d-random OFF)
-addappdir(orientation-weights-ddscat OFF)
+addappdir(orientation-weights-ddscat ON)
 addappdir(radar-relations OFF)
 addappdir(rpline ON)
 addappdir(rtmath-version ON)
