git-svn-id: file:///mnt/svn/rtmath@1711 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -33,7 +33,7 @@ addappdir(ddscat-output-ingest OFF)
 addappdir(ddscat-output-ingest-ncurses OFF)
 addappdir(ddscat-postprocess OFF)
 addappdir(ddscat-regenerate-run ON)
-addappdir(ddscat-regenerate-run-db ON)
+addappdir(ddscat-regenerate-run-db OFF)
 addappdir(ddscat-test OFF)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
@@ -60,7 +60,7 @@ addappdir(shape-extract OFF)
 addappdir(shape-hash OFF)
 addappdir(shape-hull OFF)
 addappdir(shape-match-parent OFF)
-addappdir(shape-perturb-interior ON)
+addappdir(shape-perturb-interior OFF)
 addappdir(shape-rehash OFF)
 addappdir(stats ON)
 #addappdir(tmatrix-ddscat-extract ON)
