git-svn-id: file:///mnt/svn/rtmath@1712 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -32,7 +32,7 @@ addappdir(ddscat-output ON)
 addappdir(ddscat-output-ingest OFF)
 addappdir(ddscat-output-ingest-ncurses OFF)
 addappdir(ddscat-postprocess OFF)
-addappdir(ddscat-regenerate-run ON)
+addappdir(ddscat-regenerate-run OFF)
 addappdir(ddscat-regenerate-run-db OFF)
 addappdir(ddscat-test OFF)
 addappdir(expand-shorthand ON)
