git-svn-id: file:///mnt/svn/rtmath@1713 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -24,7 +24,7 @@ addappdir(combo ON)
 addappdir(comborows ON)
 addappdir(conv-units ON)
 addappdir(ddscat-data OFF)
-addappdir(ddscat-ddpar ON)
+addappdir(ddscat-ddpar OFF)
 addappdir(ddscat-generate-ellipsoid OFF)
 addappdir(ddscat-output ON)
 #addappdir(ddscat-output-extract OFF)
