git-svn-id: file:///mnt/svn/rtmath@1714 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -18,7 +18,7 @@ endmacro(addappdir appname appdefault)
 #add_subdirectory (absorb-slab)
 #add_subdirectory (atmosplot)
 addappdir(arm-coverage OFF)
-addappdir(arm-info ON)
+addappdir(arm-info OFF)
 addappdir(arm-sacr OFF)
 addappdir(combo ON)
 addappdir(comborows ON)
