Fixed silo and tsv bug involving improper comparison of string constants. Both of these should be swithed to the template checking function in Ryan_Debug. See the hdf5 plugin for an example.
Added tsv simple shapefile output. Will expand and combine with 
Voronoi to specify shape depth as a weighting factor for use with 
hull generation.



git-svn-id: file:///mnt/svn/rtmath@1720 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library (rtmath_plugin_tsv SHARED
 	tsv-image-basicstats.cpp
 	tsv-sacr.cpp
 	tsv-shapefile.cpp
+	tsv-shapefile-sfc.cpp
 	tsv-shapestats.cpp
 	tsv-shapestats-rotdata.cpp
 	tsv-shapestats-voro.cpp
