--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -67,6 +67,7 @@ addappdir(stats ON)
 #addappdir(tmatrix-oneellip ON)
 #addappdir(tmatrix-optimize-with-ddscat OFF)
 #addappdir(tmatrix-slice ON)
+addappdir(test-cgal-1 OFF)
 addappdir(visualize-orientation-weights OFF)
 addappdir(visualize-shape-batch OFF)
 addappdir(visualize-shape-batch-fast OFF)
