Added depth tsv extraction for voronoi diagrams.
git-svn-id: file:///mnt/svn/rtmath@1721 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library (rtmath_plugin_tsv SHARED
 	tsv-shapestats.cpp
 	tsv-shapestats-rotdata.cpp
 	tsv-shapestats-voro.cpp
+	tsv-voro-sfc.cpp
 	)
 addlib(rtmath_plugin_tsv SHARED)
 
