Added the Hogan and Westbrook RG codes. Need some small testing, but will use the data for plot generation.
git-svn-id: file:///mnt/svn/rtmath@1724 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/nondda-misc/CMakeLists.txt
+++ b/rtmath/plugins/nondda-misc/CMakeLists.txt
@@ -4,7 +4,9 @@ find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 add_library (rtmath_plugin_nondda_misc SHARED 
+	nondda-rayleigh.cpp
 	nondda-rg.cpp
+	nondda-hrg.cpp
 	plugin-nondda-misc.cpp
 	plugin-nondda-misc.h
 	)
