Implemented density into oneellip program. It builds but needs testing and validation.
git-svn-id: file:///mnt/svn/rtmath@1726 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -35,6 +35,7 @@ addappdir(ddscat-postprocess OFF)
 addappdir(ddscat-regenerate-run OFF)
 addappdir(ddscat-regenerate-run-db OFF)
 addappdir(ddscat-test OFF)
+addappdir(density ON)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
 addappdir(guess-temp ON)
