tmatrix-random works for spheres. backscatter unimplemented.
git-svn-id: file:///mnt/svn/rtmath@1742 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -71,6 +71,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_TMATRIX)
 		add_subdirectory(tmatrix)
 	endif()
+	option (BUILD_PLUGIN_TMATRIX_RANDOM
+		"Build Tmatrix random orientation plugin" ON)
+	if (BUILD_PLUGIN_TMATRIX_RANDOM)
+		add_subdirectory(tmatrix-random)
+	endif()
 	option (BUILD_PLUGIN_TSV
 		"Build TSV export plugin" ON)
 	if (BUILD_PLUGIN_TSV)
