Added handling functions for the random orientation case.
Starting to write the integ-paper routines.



git-svn-id: file:///mnt/svn/rtmath@1744 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/nondda-misc/CMakeLists.txt
+++ b/rtmath/plugins/nondda-misc/CMakeLists.txt
@@ -6,7 +6,9 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 add_library (rtmath_plugin_nondda_misc SHARED 
 	nondda-rayleigh.cpp
 	nondda-rg.cpp
+	nondda-rg-iso.cpp
 	nondda-hrg.cpp
+	nondda-hrg-iso.cpp
 	plugin-nondda-misc.cpp
 	plugin-nondda-misc.h
 	)
