--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -40,6 +40,7 @@ addappdir(expand-shorthand ON)
 addappdir(getm ON)
 addappdir(guess-temp ON)
 addappdir(image-basic OFF)
+addappdir(integ-paper-1 OFF)
 addappdir(liu-regenerate-runs OFF)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
