Added filtering, stats calculation and subsetted output. TODOs: - Sorting - Stats on bin size for flake count - C interface - Fortran interface
git-svn-id: file:///mnt/svn/rtmath@1757 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/related/scatdb_ryan/CMakeLists.txt
+++ b/rtmath/related/scatdb_ryan/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library (scatdb_ryan SHARED
 	scatdb_ryan/scatdb_ryan.hpp
 	scatdb_ryan/utility.hpp
 	src/scatdb_ryan.cpp
+	src/filters.cpp
 	src/io.cpp
 	src/utility.cpp
 	)
