lowess routine applied. Fits well. See parameters hardcoded in scatdb_ryan.cpp.
git-svn-id: file:///mnt/svn/rtmath@1761 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/related/scatdb_ryan/CMakeLists.txt
+++ b/rtmath/related/scatdb_ryan/CMakeLists.txt
@@ -24,12 +24,14 @@ link_directories(${Boost_LIBRARY_DIR})
 add_library (scatdb_ryan SHARED
 	scatdb_ryan/defs.h
 	scatdb_ryan/defs.hpp
+	scatdb_ryan/lowess.h
 	scatdb_ryan/scatdb_ryan.h
 	scatdb_ryan/scatdb_ryan.hpp
 	scatdb_ryan/utility.hpp
 	src/scatdb_ryan.cpp
 	src/scatdb_ryan_c.cpp
 	src/filters.cpp
+	src/lowess.cpp
 	src/io.cpp
 	src/utility.cpp
 	)
