udunits plugin works fine. Need to update the apps.
git-svn-id: file:///mnt/svn/rtmath@1771 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -81,6 +81,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_TSV)
 		add_subdirectory(tsv-export)
 	endif()
+	option (BUILD_PLUGIN_UDUNITS
+		"Build udunits plugin. Supplements unit conversions." ON)
+	if (BUILD_PLUGIN_UDUNITS)
+		add_subdirectory(udunits)
+	endif()
 	option (BUILD_PLUGIN_VORO
 		"Build VORO++ 3d plugin. Used in Voronoi diagram." ON)
 	if (BUILD_PLUGIN_VORO)
